		- Note: disabled by default on lower-end computers
	- Added menu entry to suddenly switch to full day or full night
- Small improvements to various tools (among which, Thanos Snap, Anti-Matter Bomb, and Blast)
	- Check out the new SHIFT mode with the Thanos Snap!
- Fixed: loading flipped or rotated ships now flips and rotates engines accordingly
- Added black glass material
- ...and a few more small improvements here and there!
- Musical theme for this release: Random Forest, Ascension

1.17.5
- Added new "Laser Cannon" tool
- Improved behavior of lamps under extreme conditions:
	- At great ocean depths
	- When subject to electric sparks
	- When their power generator is flooded
- ShipBuilder:
	- Added Copy/Cut/Paste tools
	- Added rectangle-drawing tool
	- Allowed electrical particles to be placed on rope endpoints, thus enabling construction of "electrical ropes"
	- Fixed a sporadic crash with the rope-drawing tool
- Added Ukrainian translation - thanks to Roman Shavernew (Dioxcode)!
- Added 6 new ships

1.17.4
- Improved "Ship Load" window, allowing to sort by different attributes, and allowing to load ships flipped and/or rotated
- Small user interface changes here and there, mostly to improve experience on Windows 11
- Fixed bug which would cause ships to explode when increasing the "strength adjustment" setting
- Fixed sporadic ShipBuilder crash while the Ropes tool was setup with "no rope" material
- Added one new ship, "Steffinton Class Hovercraft" - by Pocketwatch
- Added new background music track, "Nightmare" - by Kukan Effect (https://kukaneffect.bandcamp.com/)

1.17.3
- Added Jet Engines
	- Not really "ship" stuff, but essential to a physics simulator nonetheless :-)
	- Two types of engines:
		- Jet Engine: provides main propulsion
		- Jet Thrust Engine: provides short bursts to correct small directional deviations
	- ...and two engine controllers:
		- Jet Engine Throttle Controller: best for controlling Jet engines